reduce parameter evaluation offline for this notebook to recall, precision and latency

--- a/notebook/indo_ecotourism_neural_recsys.ipynb
+++ b/notebook/indo_ecotourism_neural_recsys.ipynb
@@ -36,14 +36,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "00f53056",
-        "outputId": "21f964aa-015f-4768-f5ab-073bf0cadc17"
+        "outputId": "f3f5abf5-6cd2-48b9-c159-fd3a22bd8632"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "TF: 2.19.0 | TFRS: v0.7.3\n"
+            "TF: 2.20.0 | TFRS: v0.7.3\n"
           ]
         }
       ],
@@ -88,7 +88,7 @@
           "height": 423
         },
         "id": "b5ea901e",
-        "outputId": "eb91451d-7cdc-4b18-ec9b-9e2c2a2ca0ac"
+        "outputId": "573cd312-6af1-4c37-b91d-1fd3849e6b19"
       },
       "outputs": [
         {
@@ -178,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ab9656d",
-        "outputId": "740f8c64-a192-45d3-87c2-9f568fd54793"
+        "outputId": "4e2b0673-76c7-4284-fdf0-2795f6e27dfc"
       },
       "outputs": [
         {
@@ -267,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0d8203a1",
-        "outputId": "307a180f-5b54-4aa3-8675-d98b0f917531"
+        "outputId": "7fac7af3-ae60-41fd-bc9b-a4e56f2e531e"
       },
       "outputs": [
         {
@@ -346,7 +346,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "63b85297",
-        "outputId": "3782dcd8-4865-4d75-a446-ccc4028efeea"
+        "outputId": "21beee04-a08e-47c4-ad1b-4d251bcbe670"
       },
       "outputs": [
         {
@@ -501,7 +501,7 @@
           "height": 410
         },
         "id": "7c1c4f93",
-        "outputId": "e15c4275-75c5-43f1-b467-2e8c7c6fd2dc"
+        "outputId": "d7a43a52-22a8-473b-8728-c4e8aba2f31a"
       },
       "outputs": [
         {
@@ -544,50 +544,40 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 98
         },
         "id": "b7e1e84b",
-        "outputId": "949f13bb-3c75-4b5f-ee13-299610334697"
+        "outputId": "d0671a3c-f770-48a1-e69b-d712411271a4"
       },
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<pandas.io.formats.style.Styler at 0x78bbc146c890>"
+              "<pandas.io.formats.style.Styler at 0x7c69904388c0>"
             ],
             "text/html": [
               "<style type=\"text/css\">\n",
-              "#T_02418_row0_col0, #T_02418_row0_col1, #T_02418_row0_col2, #T_02418_row0_col3, #T_02418_row0_col4, #T_02418_row0_col5, #T_02418_row0_col6, #T_02418_row0_col7 {\n",
+              "#T_b81f3_row0_col0, #T_b81f3_row0_col1, #T_b81f3_row0_col2 {\n",
               "  background-color: #f7fbff;\n",
               "  color: #000000;\n",
               "}\n",
               "</style>\n",
-              "<table id=\"T_02418\" class=\"dataframe\">\n",
+              "<table id=\"T_b81f3\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr>\n",
               "      <th class=\"blank level0\" >&nbsp;</th>\n",
-              "      <th id=\"T_02418_level0_col0\" class=\"col_heading level0 col0\" >P@1</th>\n",
-              "      <th id=\"T_02418_level0_col1\" class=\"col_heading level0 col1\" >recall@1</th>\n",
-              "      <th id=\"T_02418_level0_col2\" class=\"col_heading level0 col2\" >recall@5</th>\n",
-              "      <th id=\"T_02418_level0_col3\" class=\"col_heading level0 col3\" >recall@10</th>\n",
-              "      <th id=\"T_02418_level0_col4\" class=\"col_heading level0 col4\" >recall@20</th>\n",
-              "      <th id=\"T_02418_level0_col5\" class=\"col_heading level0 col5\" >MRR</th>\n",
-              "      <th id=\"T_02418_level0_col6\" class=\"col_heading level0 col6\" >nDCG@10</th>\n",
-              "      <th id=\"T_02418_level0_col7\" class=\"col_heading level0 col7\" >Latency(ms/q)</th>\n",
+              "      <th id=\"T_b81f3_level0_col0\" class=\"col_heading level0 col0\" >precision@10</th>\n",
+              "      <th id=\"T_b81f3_level0_col1\" class=\"col_heading level0 col1\" >recall@10</th>\n",
+              "      <th id=\"T_b81f3_level0_col2\" class=\"col_heading level0 col2\" >Latency(ms/q)</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th id=\"T_02418_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-              "      <td id=\"T_02418_row0_col0\" class=\"data row0 col0\" >0.239</td>\n",
-              "      <td id=\"T_02418_row0_col1\" class=\"data row0 col1\" >0.239</td>\n",
-              "      <td id=\"T_02418_row0_col2\" class=\"data row0 col2\" >0.478</td>\n",
-              "      <td id=\"T_02418_row0_col3\" class=\"data row0 col3\" >0.576</td>\n",
-              "      <td id=\"T_02418_row0_col4\" class=\"data row0 col4\" >0.793</td>\n",
-              "      <td id=\"T_02418_row0_col5\" class=\"data row0 col5\" >0.355</td>\n",
-              "      <td id=\"T_02418_row0_col6\" class=\"data row0 col6\" >0.390</td>\n",
-              "      <td id=\"T_02418_row0_col7\" class=\"data row0 col7\" >0.26</td>\n",
+              "      <th id=\"T_b81f3_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_b81f3_row0_col0\" class=\"data row0 col0\" >0.058</td>\n",
+              "      <td id=\"T_b81f3_row0_col1\" class=\"data row0 col1\" >0.576</td>\n",
+              "      <td id=\"T_b81f3_row0_col2\" class=\"data row0 col2\" >0.20</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n"
@@ -599,76 +589,76 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Raw metrics: {'P@1': 0.2391304347826087, 'MRR': 0.3550531349889881, 'nDCG@10': 0.3900579029532328, 'Latency(ms/q)': 0.2606040217391801, 'recall@1': 0.2391304347826087, 'recall@5': 0.4782608695652174, 'recall@10': 0.5760869565217391, 'recall@20': 0.7934782608695652}\n"
+            "Raw metrics: {'precision@10': 0.05760869565217388, 'recall@10': 0.5760869565217391, 'Latency(ms/q)': 0.19543011956473122}\n"
           ]
         }
       ],
       "source": [
+        "K_EVAL = 10\n",
+        "\n",
         "def _embed_items(model, texts, batch=512):\n",
-        "    V=[]\n",
+        "    V = []\n",
         "    for i in range(0, len(texts), batch):\n",
         "        V.append(model(tf.constant(texts[i:i+batch])).numpy())\n",
         "    return np.vstack(V).astype(\"float32\")\n",
         "\n",
-        "def _metrics_from_ranks(order_row, gt_idx, ks=(1,5,10,20)):\n",
-        "    out = {f\"recall@{k}\": 0.0 for k in ks}\n",
-        "    p1 = 0.0; mrr = 0.0; ndcg10 = 0.0\n",
-        "    try:\n",
-        "        pos = int(np.where(order_row == gt_idx)[0][0]) + 1  # 1-based\n",
-        "        p1 = 1.0 if pos == 1 else 0.0\n",
-        "        mrr = 1.0 / pos\n",
-        "        if pos <= 10:\n",
-        "            ndcg10 = 1.0 / math.log2(pos + 1)\n",
-        "        for k in ks:\n",
-        "            if pos <= k: out[f\"recall@{k}\"] = 1.0\n",
-        "    except Exception:\n",
-        "        pass\n",
-        "    return p1, out, mrr, ndcg10\n",
-        "\n",
-        "def evaluate_full(user_model, item_model, val_df_join, items_text, ks=(1,5,10,20), batch=256):\n",
+        "def evaluate_pr_re_latency(user_model, item_model, val_df_join, items_text, k=10, batch=256):\n",
         "    V = _embed_items(item_model, items_text)\n",
-        "    text2idx = {t:i for i,t in enumerate(items_text)}\n",
+        "    text2idx = {t: i for i, t in enumerate(items_text)}\n",
         "\n",
-        "    sums = {\"P@1\":0.0, \"MRR\":0.0, \"nDCG@10\":0.0, \"Latency(ms/q)\":0.0}\n",
-        "    for k in ks: sums[f\"recall@{k}\"] = 0.0\n",
-        "    n = 0\n",
+        "    sum_prec = 0.0\n",
+        "    sum_rec  = 0.0\n",
+        "    sum_ms   = 0.0\n",
+        "    n        = 0\n",
         "\n",
         "    for i in range(0, len(val_df_join), batch):\n",
         "        q  = val_df_join[\"query_text\"].astype(str).values[i:i+batch]\n",
         "        gt = val_df_join[\"item_text\"].astype(str).values[i:i+batch]\n",
+        "\n",
         "        t0 = time.perf_counter()\n",
         "        U  = user_model(tf.constant(q)).numpy()\n",
         "        sims = U @ V.T\n",
-        "        ms_per = ((time.perf_counter() - t0) * 1000.0) / max(1,len(q))\n",
-        "        order = np.argsort(-sims, axis=1)\n",
+        "        ms_per = ((time.perf_counter() - t0) * 1000.0) / max(1, len(q))\n",
+        "\n",
+        "        topk_idx = np.argsort(-sims, axis=1)[:, :k]\n",
         "\n",
         "        for r, t in enumerate(gt):\n",
         "            gi = text2idx.get(t, -1)\n",
-        "            if gi < 0: continue\n",
-        "            p1, recs, mrr, nd = _metrics_from_ranks(order[r], gi, ks=ks)\n",
-        "            sums[\"P@1\"] += p1\n",
-        "            sums[\"MRR\"] += mrr\n",
-        "            sums[\"nDCG@10\"] += nd\n",
-        "            for k in ks: sums[f\"recall@{k}\"] += recs[f\"recall@{k}\"]\n",
-        "            sums[\"Latency(ms/q)\"] += ms_per\n",
-        "            n += 1\n",
+        "            if gi < 0:\n",
+        "                continue\n",
+        "            hit = 1.0 if gi in topk_idx[r] else 0.0\n",
+        "            sum_prec += hit / k\n",
+        "            sum_rec  += hit\n",
+        "            sum_ms   += ms_per\n",
+        "            n        += 1\n",
         "\n",
-        "    avg = {k:(v/max(1,n)) for k,v in sums.items()}\n",
-        "    return avg\n",
+        "    return {\n",
+        "        f\"precision@{k}\": sum_prec / max(1, n),\n",
+        "        f\"recall@{k}\":    sum_rec  / max(1, n),\n",
+        "        \"Latency(ms/q)\":  sum_ms   / max(1, n),\n",
+        "    }\n",
         "\n",
         "items_text = items[\"gabungan\"].astype(str).tolist()\n",
-        "val_join   = val_df.merge(items[[\"item_id\",\"gabungan\"]], on=\"item_id\", how=\"left\").rename(columns={\"gabungan\":\"item_text\"})\n",
-        "metrics = evaluate_full(user_model, item_model, val_join, items_text, ks=(1,5,10,20))\n",
+        "val_join   = val_df.merge(\n",
+        "    items[[\"item_id\", \"gabungan\"]],\n",
+        "    on=\"item_id\", how=\"left\"\n",
+        ").rename(columns={\"gabungan\": \"item_text\"}).dropna(subset=[\"item_text\"]).reset_index(drop=True)\n",
+        "\n",
+        "metrics = evaluate_pr_re_latency(user_model, item_model, val_join, items_text, k=K_EVAL)\n",
         "\n",
         "tbl = pd.DataFrame([metrics])\n",
-        "order_cols = [\"P@1\",\"recall@1\",\"recall@5\",\"recall@10\",\"recall@20\",\"MRR\",\"nDCG@10\",\"Latency(ms/q)\"]\n",
+        "order_cols = [f\"precision@{K_EVAL}\", f\"recall@{K_EVAL}\", \"Latency(ms/q)\"]\n",
         "tbl = tbl.reindex(columns=order_cols)\n",
+        "\n",
         "try:\n",
-        "    display(tbl.style.format({c:\"{:.3f}\" for c in order_cols if \"Latency\" not in c} | {\"Latency(ms/q)\":\"{:.2f}\"})\n",
-        "            .background_gradient(cmap=\"Blues\"))\n",
+        "    display(\n",
+        "        tbl.style.format({f\"precision@{K_EVAL}\":\"{:.3f}\", f\"recall@{K_EVAL}\":\"{:.3f}\", \"Latency(ms/q)\":\"{:.2f}\"})\n",
+        "           .background_gradient(cmap=\"Blues\")\n",
+        "    )\n",
         "except Exception:\n",
         "    display(tbl)\n",
-        "print(\"Raw metrics:\", metrics)\n"
+        "\n",
+        "print(\"Raw metrics:\", metrics)"
       ]
     },
     {
@@ -693,7 +683,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "952306e5",
-        "outputId": "5841d8db-d005-4e7a-a86c-0d16be03e702"
+        "outputId": "09a964ee-932a-49fa-b542-a46c051d9497"
       },
       "outputs": [
         {
@@ -781,7 +771,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "436a6bbd",
-        "outputId": "67de8ee7-09d7-43f5-afeb-c514995b3ada"
+        "outputId": "dfca45ac-b580-4c04-ea30-aed2ff37f1c4"
       },
       "outputs": [
         {
